--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,7 @@ stack-data==0.6.3
 sympy==1.14.0
 threadpoolctl==3.6.0
 tokenizers==0.21.1
-torch==2.7.0+cu118
+torch==2.7.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
